separate TaxonomyInterface class clean cmake build process licence information in every file blastxml2alignments supports parameters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,25 @@
-PROJECT(ttp)
+PROJECT(taxator-tk)
 
 cmake_minimum_required( VERSION 2.6 )
 
-# find_package(sqlite3)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake-modules)
+
+find_package(Sqlite3)
+find_package(Boost 1.34.1 REQUIRED program_options)
+
 set(CMAKE_CXX_FLAGS "-g -Wall")
 # set(CMAKE_CXX_FLAGS "-m32")
 
 # unittest: constructs the taxonomy from NCBI dump files and tests the structure thoroughly
-add_executable( unittest_ncbitaxonomy unittest_ncbitaxonomy.cpp src/ncbidata.cpp src/accessconv.cpp src/taxontree.cpp src/sqlite3pp.cpp )
+add_executable( unittest_ncbitaxonomy unittest_ncbitaxonomy.cpp src/ncbidata.cpp src/accessconv.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/sqlite3pp.cpp )
 target_link_libraries( unittest_ncbitaxonomy sqlite3 )
 
 # traverse nodes up to a given rank
-add_executable( rank-filter rank-filter.cpp src/taxontree.cpp src/ncbidata.cpp )
+add_executable( rank-filter rank-filter.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp )
 target_link_libraries( rank-filter boost_program_options )
 
 # looks up the name or rank name of a node
-add_executable( name-filter name-filter.cpp src/taxontree.cpp src/ncbidata.cpp )
+add_executable( name-filter name-filter.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp )
 target_link_libraries( name-filter boost_program_options )
 
 # general converter for string or id mappings
@@ -31,11 +35,11 @@ add_executable( alignments-prefilter alignments-prefilter.cpp src/alignmentrecor
 target_link_libraries( alignments-prefilter boost_program_options )
 
 # takes input alignments and predicts a taxon for each query id using various methods and parameters
-add_executable( predictor predictor.cpp src/taxontree.cpp src/ncbidata.cpp src/accessconv.cpp src/sqlite3pp.cpp src/alignmentrecord.cpp src/taxonprediction.cpp )
+add_executable( predictor predictor.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp src/accessconv.cpp src/sqlite3pp.cpp src/alignmentrecord.cpp src/taxonprediction.cpp )
 target_link_libraries( predictor sqlite3 boost_program_options )
 
 # measures the prediction error in terms of tree path distances
-add_executable( prediction2distances prediction2distances.cpp src/taxontree.cpp src/ncbidata.cpp )
+add_executable( prediction2distances prediction2distances.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp )
 target_link_libraries( prediction2distances boost_program_options )
 
 # various formulas for error calculation
@@ -43,5 +47,5 @@ add_executable( prediction-error prediction-error.cpp )
 target_link_libraries( prediction-error boost_program_options )
 
 # filter alignments (supervised mode, needed for benchmarks only)
-add_executable( alignments-prefilter-training alignments-prefilter-training.cpp src/alignmentrecord.cpp src/accessconv.cpp src/sqlite3pp src/taxontree.cpp src/ncbidata.cpp )
+add_executable( alignments-prefilter-training alignments-prefilter-training.cpp src/alignmentrecord.cpp src/accessconv.cpp src/sqlite3pp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp )
 target_link_libraries( alignments-prefilter-training boost_program_options sqlite3 )
