changes correspond to 1.0rc1 in beta and article submission

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set( project_name taxator-tk )
 
 # cmake requirements detection
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake-modules)
-find_package( Sqlite3 )
+# find_package( Sqlite3 )
 find_package( Boost "${boost_version_required}" REQUIRED COMPONENTS program_options filesystem )
 if( Boost_FOUND )
 	if( Boost_VERSION LESS "${boost_version_required_enc}" )
@@ -22,11 +22,11 @@ else()
   message( FATAL_ERROR "Unable to find a Boost version. Did you set BOOST_ROOT?" )
 endif()
 include_directories( "includes-external" )
-set(CMAKE_CXX_FLAGS "-Wall -pedantic -Wno-long-long -Wno-variadic-macros -fpermissive") #-g for debuggin, -m32 for x32
+set(CMAKE_CXX_FLAGS "-Wall -pedantic -Wno-long-long -Wno-variadic-macros -fpermissive -O3") #-g for debuggin, -m32 for x32
 
 # unittest: constructs the taxonomy from NCBI dump files and tests the structure thoroughly
-add_executable( unittest_ncbitaxonomy unittest_ncbitaxonomy.cpp src/ncbidata.cpp src/accessconv.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/sqlite3pp.cpp )
-target_link_libraries( unittest_ncbitaxonomy boost_system sqlite3 boost_filesystem )
+add_executable( unittest_ncbitaxonomy unittest_ncbitaxonomy.cpp src/ncbidata.cpp src/accessconv.cpp src/taxontree.cpp src/taxonomyinterface.cpp )
+target_link_libraries( unittest_ncbitaxonomy boost_system boost_filesystem )
 
 # traverse nodes up to a given rank
 add_executable( rank-filter rank-filter.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp )
@@ -37,20 +37,20 @@ add_executable( name-filter name-filter.cpp src/taxontree.cpp src/taxonomyinterf
 target_link_libraries( name-filter boost_program_options boost_system boost_filesystem )
 
 # general converter for string or id mappings
-add_executable( acc2taxid acc2taxid.cpp src/accessconv.cpp src/sqlite3pp )
-target_link_libraries( acc2taxid sqlite3 boost_program_options boost_system boost_filesystem )
+add_executable( acc2taxid acc2taxid.cpp src/accessconv.cpp )
+target_link_libraries( acc2taxid boost_program_options boost_system boost_filesystem )
 
 # parses NCBI-style identifiers in the FASTA comment header
 add_executable( extract-fastacomment-ncbifield extract-fastacomment-ncbifield.cpp src/ncbidata.cpp src/taxontree.cpp )
 target_link_libraries( extract-fastacomment-ncbifield boost_program_options boost_system boost_filesystem )
 
 # apply filtering to alignments file
-add_executable( alignments-filter alignments-filter.cpp src/alignmentrecord.cpp src/accessconv.cpp src/sqlite3pp.cpp )
-target_link_libraries( alignments-filter boost_program_options boost_system boost_filesystem sqlite3 )
+add_executable( alignments-filter alignments-filter.cpp src/alignmentrecord.cpp src/accessconv.cpp )
+target_link_libraries( alignments-filter boost_program_options boost_system boost_filesystem )
 
 # takes input alignments and predicts a taxon for each query id using various methods and parameters
-add_executable( taxator taxator.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp src/accessconv.cpp src/sqlite3pp.cpp src/taxonpredictionmodel.cpp src/predictionrecord.cpp )
-target_link_libraries( taxator sqlite3 boost_program_options boost_system boost_filesystem boost_thread )
+add_executable( taxator taxator.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp src/accessconv.cpp src/taxonpredictionmodel.cpp src/predictionrecord.cpp )
+target_link_libraries( taxator boost_program_options boost_system boost_filesystem boost_thread )
 
 # apply filtering to predictions file
 add_executable( binner binner.cpp src/taxontree.cpp src/taxonomyinterface.cpp src/ncbidata.cpp src/predictionrecord.cpp )
